--- a/app/styles/Portfolio.css
+++ b/app/styles/Portfolio.css
@@ -4,7 +4,7 @@
 .portfolio-wrapper {
   width: 100%;
   position: relative;
-  background-color: #1f2030;
+  background-color: transparent;
 }
 
 .portfolio-container {
