--- a/app/styles/Hero.css
+++ b/app/styles/Hero.css
@@ -1,5 +1,4 @@
 /* HERO WRAPPER */
-
 .hero {
   position: relative;
   z-index: 1;
@@ -10,13 +9,12 @@
   z-index: 1;
 }
 
-
 .hero {
     background-image: linear-gradient(rgba(43,45,66,0.75), rgba(43,45,66,0.75)),
-        url("https://images.unsplash.com/photo-1616469832301-ffaeadc68cf3?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0");
+        url("https://plus.unsplash.com/premium_photo-1661301109137-1014c71a199f?q=80&w=1169&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-size: cover;
-    background-position: bottom;
-    background-attachment: fixed;
+    background-position: center 30%; /* CHANGED from "bottom" */
+    /* background-attachment: fixed; REMOVED */
     height: 100vh;
     display: flex;
     align-items: center;
