--- a/app/styles/Navbar.css
+++ b/app/styles/Navbar.css
@@ -101,8 +101,8 @@
 
 /* TOP NAVBAR */
 .top-nav {
+  position: fixed;
   z-index: 100;
-  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -383,12 +383,12 @@
     margin-top: 15px;
     padding: 0 10px;
   }
-  
+
   .nav-buttons .btn {
     width: 100%;
     justify-content: center;
   }
-  
+
   .user-email {
     width: 100%;
     text-align: center;
